Fix layout issues and lighthouse score

--- a/blocks/awards-search/awards-search.css
+++ b/blocks/awards-search/awards-search.css
@@ -58,13 +58,12 @@ main .section .awards-search .awards-results-container .award-item-container {
     box-shadow: 0 0.1875rem 0.5rem 0 rgb(0 0 0 / 10%);
     margin-bottom: 1.875rem;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 main .section .awards-search .awards-results-container .award-item-container .award-logo {
     margin: auto 0;
     text-align: center;
-    width: 5.625rem;
 }
 
 main .section .awards-search .awards-results-container .award-item-container .award-logo img {
@@ -77,17 +76,16 @@ main .section .awards-search .awards-results-container .award-item-container .aw
 main .section .awards-search .awards-results-container .award-item-container .award-item-description {
     display: flex;
     flex-direction: column;
-    padding-left: 2.5625rem;
 }
 
 main .section .awards-search .awards-results-container .award-item-container h2 {
     max-height: 76px;
-    font-size: var(--heading-font-size-m);
+    font-size: var(--heading-font-size-xs);
 }
 
 .award-item-container a {
     color: var(--read-more-text-color);
-    opacity: 0;
+    opacity: 1;
 }
 
 .award-item-container a:hover {
@@ -104,7 +102,7 @@ main .section .awards-search .awards-results-container .award-item-container h2 
     mask: url('/icons/arrow-right.svg');
     background-color: var(--read-more-text-color);
     display: inline-block;
-    opacity: 0;
+    opacity: 1;
     position: relative;
     top: 0.25rem;
     transition: all .2s cubic-bezier(.4,0,.2,1);
@@ -179,10 +177,6 @@ main .section .awards-search .awards-results-container .award-results-filters-co
 }
 
 @media (min-width: 768px) {
-    .awards-search main .section .hero {
-        min-height: 8.25rem;
-    }
-
     main .section .awards-search {
         flex-direction: row;
     }
@@ -193,6 +187,18 @@ main .section .awards-search .awards-results-container .award-results-filters-co
     
     main .section .awards-search .awards-results-container {
         flex: 2;
+    }
+
+    main .section .awards-search .awards-results-container .award-item-container {
+        flex-direction: row;
+    }
+
+    main .section .awards-search .awards-results-container .award-item-container .award-logo {
+        width: 5.625rem;
+    }
+
+    main .section .awards-search .awards-results-container .award-item-container .award-item-description {
+        padding-left: 2.5625rem;
     }
 
     main .section .awards-search .awards-results-container .award-item-container h2 {
@@ -211,5 +217,19 @@ main .section .awards-search .awards-results-container .award-results-filters-co
 
     .text-box-search-magnifing-glass {
         left: 11rem;
+    }
+}
+
+@media (min-width: 990px) {
+    .awards-search main .section .hero {
+        min-height: 8.25rem;
+    }
+
+    .award-item-container a {
+        opacity: 0;
+    }
+
+    .award-item-container a::after {
+        opacity: 0;
     }
 }
